--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body, html {
 
 /* Slideshow Background */
 .slideshow {
-  top:80%
+  top:auto
   margin-right: 10%;
   margin-left: 60%;
-  width: 32%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   z-index: -1;
