--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ body, html {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  color: white;
+  color: red;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 
